# omini_vex

./: pyproject.toml
examples/: explore_worker_group.py  simple_model_torch.py
src/omini_vex/: __init__.py
src/omini_vex/policy/: base.py  simple_torch_dtensor.py
src/omini_vex/ray_distributed/: named_sharding.py  ray_actor_enviroment_registry.py  virtual_cluster.py  worker_group_utils.py  worker_groups.py
src/omini_vex/utils/: venvs.py
test/ray_distributed_test/: cluster_virtual.py  test_worker_group_comprehensive.py  worker_group_test.py
