[project]
name = "omini-vex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tue Nguyen", email = "tue@ii.inc" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pytest>=9.0.0",
    "ray[default]>=2.51.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
